Backward compatibility with JDK-21 Foreign Function preview feature